minor alterations to routes
